@@ -18,7 +18,7 @@ javafx {
 }
 
 application {
-    applicationDefaultJvmArgs = ['--illegal-access=permit']
+    applicationDefaultJvmArgs = ['--illegal-access=permit', '-XX:+UseZGC']
 }
 
 repositories {
